--- a/Chrome_Extension/data/interface/index.html
+++ b/Chrome_Extension/data/interface/index.html
@@ -1,33 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-		<title>Speech to Text (Voice Recognition)</title>
-		<link type="text/css" rel="stylesheet" href="index.css">
-		<link href="../icons/16.png" rel="icon" type="image/ico">
-		<meta content="initial-scale=1, minimum-scale=1, width=device-width" name="viewport">
-  </head>
-  <body>
-    <div class="toolbar">
-      <table>
-        <tr>
-          <td id="reload" title="Reload UI">
-            <svg width="10" height="10" viewBox="0 0 512 512">
-              <path d="M281.525,228.102l104.758-78.042 c12.082-12.085,12.082-24.259,0-36.342L281.525,35.674c-3.274-2.359-7.359-3.725-11.723-3.725c-10.992,0-19.803,8.536-19.803,19.083  v35.429C144.611,86.737,59.205,172.046,59.205,277.258c0,105.396,85.672,190.793,191.248,190.793 c98.03,0,178.809-73.498,189.977-168.169c0.092-0.275,0.367-3.187,0.367-4.455c0-9.992-8.181-18.169-18.261-18.169h-45.793 c-14.993,0-26.349,10.355-27.893,18.986c-8.811,46.156-49.519,80.954-98.397,80.954c-55.329,0-100.127-44.701-100.127-99.94 c0-55.064,44.523-99.667,99.674-99.941v35.437c0,10.541,8.811,19.076,19.803,19.076C274.166,231.83,278.251,230.471,281.525,228.102 z"/>
-            </svg>
-          </td>
-        </tr>
-        <tr>
-      </table>
-		</div>
-    <div class="container">
-      <div class="results">
-        <span class="final" id="final" contenteditable="true"></span>
-				<span class="interim" id="interim"></span>
+<head>
+  <meta charset="utf-8">
+  <title>Speech to Text (Voice Recognition)</title>
+  <link type="text/css" rel="stylesheet" href="index.css">
+  <link href="../icons/16.png" rel="icon" type="image/ico">
+  <meta content="initial-scale=1, minimum-scale=1, width=device-width" name="viewport">
+</head>
+<body>
+  <div class="container">
+    <div class="chat-container">
+      <div id="chat-box"></div>
+      <!-- <input type="text" id="user-input" placeholder="Type your message..." />
+      <button id="send-button">Send</button> -->
+    </div>
+    
+   
+    
+    <div class="console">
+      <pre id="info"></pre>
+      <div class="toolbar">
+        <table>
+          <tr>
+            <td id="reload" title="Reload UI">
+              <svg width="10" height="10" viewBox="0 0 512 512">
+                <path d="M281.525,228.102l104.758-78.042 c12.082-12.085,12.082-24.259,0-36.342L281.525,35.674c-3.274-2.359-7.359-3.725-11.723-3.725c-10.992,0-19.803,8.536-19.803,19.083 v35.429C144.611,86.737,59.205,172.046,59.205,277.258c0,105.396,85.672,190.793,191.248,190.793 c98.03,0,178.809-73.498,189.977-168.169c0.092-0.275,0.367-3.187,0.367-4.455c0-9.992-8.181-18.169-18.261-18.169h-45.793 c-14.993,0-26.349,10.355-27.893,18.986c-8.811,46.156-49.519,80.954-98.397,80.954c-55.329,0-100.127-44.701-100.127-99.94 c0-55.064,44.523-99.667,99.674-99.941v35.437c0,10.541,8.811,19.076,19.803,19.076C274.166,231.83,278.251,230.471,281.525,228.102 z"/>
+              </svg>
+            </td>
+          </tr>
+        </table>
       </div>
-      <div class="console">
-        <pre id="info"></pre>
-      </div>
+    </div>
+    <div class="results">
+      <span class="final" id="final" contenteditable="true"></span>
+      <span class="interim" id="interim"></span>
     </div>
     <div class="buttons">
       <table>
@@ -37,6 +43,9 @@
               <img alt="start" id="talk" src="images/mic.png">
             </button>
           </td>
+          <td class="cancelop">
+            <button id="cancel" disabled>Cancel</button>
+          </td>
           <td class="settings">
             <select id="language" title="Select a language"></select>
             <select id="dialect" title="Select a dialect"></select>
@@ -44,8 +53,9 @@
         </tr>
       </table>
     </div>
-    <!-- -->
-		<script type="text/javascript" src="index.js"></script>
-		<script type="text/javascript" src="resources/language.js"></script>
-  </body>
+  </div>
+
+  <script type="text/javascript" src="index.js"></script>
+  <script type="text/javascript" src="resources/language.js"></script>
+</body>
 </html>
