--- a/Chrome_Extension/data/interface/index.html
+++ b/Chrome_Extension/data/interface/index.html
@@ -2,12 +2,13 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Speech to Text (Voice Recognition)</title>
+  <title>Flippi SalesPerson Bot</title>
   <link type="text/css" rel="stylesheet" href="index.css">
   <link href="../icons/16.png" rel="icon" type="image/ico">
   <meta content="initial-scale=1, minimum-scale=1, width=device-width" name="viewport">
 </head>
 <body>
+  <div class="header">Flippi Bot: Made by Team Sigma</div>
   <div class="container">
     <div class="chat-container">
       <div id="chat-box"></div>
@@ -54,7 +55,6 @@
       </table>
     </div>
   </div>
-
   <script type="text/javascript" src="index.js"></script>
   <script type="text/javascript" src="resources/language.js"></script>
 </body>
